--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,6 @@
   ],
   "orientation": "portrait",
   "display": "standalone",
-  "theme_color": "#ff007a",
+  "theme_color": "#F76E11",
   "background_color": "#fff"
 }
