--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_CHAIN_ID="1"
-REACT_APP_NETWORK_URL="http://localhost:8545"
+REACT_APP_CHAIN_ID="7171"
+REACT_APP_NETWORK_URL="http://connect.bit-rock.io"
